- Rate limiting: Implemented   - Security headers: Implemented   - Bank account encryption: Implemented   - Unit test coverage: Significantly improved (104 tests for critical services)   - Integration tests: Created (require Docker environment)